user friendly username href path
